@@ -1,49 +1,28 @@
 package com.codeWithProject.ecom.service.impl;
 
-import com.codeWithProject.ecom.entity.Competence;
-import com.codeWithProject.ecom.entity.Employe;
-import com.codeWithProject.ecom.entity.EmployeCompetence;
-import com.codeWithProject.ecom.entity.Manager;
-import com.codeWithProject.ecom.repository.CompetenceRepository;
-import com.codeWithProject.ecom.repository.DemandeCongeRepository;
-import com.codeWithProject.ecom.repository.EmployeCompetenceRepository;
-import com.codeWithProject.ecom.repository.EmployeRepository;
-import com.codeWithProject.ecom.repository.FormationRepository;
-import com.codeWithProject.ecom.repository.ManagerRepository;
-import com.codeWithProject.ecom.repository.ServiceRepository;
-import com.codeWithProject.ecom.service.AuditService;
-import com.codeWithProject.ecom.service.EmployeService;
-import com.codeWithProject.ecom.service.KeycloakPasswordService;
-import com.codeWithProject.ecom.service.dto.ChangePasswordRequest;
-import com.codeWithProject.ecom.service.dto.CompetenceDTO;
-import com.codeWithProject.ecom.service.dto.CompetenceEmployeDTO;
-import com.codeWithProject.ecom.service.dto.EmployeDTO;
-import com.codeWithProject.ecom.service.dto.FormationEmployeDTO;
-import com.codeWithProject.ecom.service.dto.HistoriqueCongeDTO;
-import com.codeWithProject.ecom.service.dto.SoldeCongesDTO;
-import com.codeWithProject.ecom.service.dto.TableauBordEmployeDTO;
-import com.codeWithProject.ecom.service.dto.UpdateProfilRequest;
-import com.codeWithProject.ecom.service.exception.BusinessException;
-import com.codeWithProject.ecom.service.exception.ResourceNotFoundException;
+import com.codeWithProject.ecom.entity.*;
+import com.codeWithProject.ecom.repository.*;
+import com.codeWithProject.ecom.service.*;
+import com.codeWithProject.ecom.service.dto.*;
+import com.codeWithProject.ecom.service.exception.*;
 import com.codeWithProject.ecom.service.mapper.EmployeMapper;
+
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.oauth2.jwt.Jwt;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import com.codeWithProject.ecom.service.KeycloakPasswordService;
-import java.time.LocalDate;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.stream.Collectors;
+import org.springframework.web.multipart.MultipartFile;
+
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.*;
 
 @Service
 @RequiredArgsConstructor
@@ -51,226 +30,93 @@ import java.util.stream.Collectors;
 @Slf4j
 public class EmployeServiceImpl implements EmployeService {
 
-    private final EmployeRepository employeRepository;
-    private final ServiceRepository serviceRepository;
     private final ManagerRepository managerRepository;
+    private final ServiceRepository serviceRepository;
+    private final EmployeRepository employeRepository;
+    private final EmployeFormationRepository employeFormationRepository;
     private final EmployeCompetenceRepository employeCompetenceRepository;
     private final DemandeCongeRepository demandeCongeRepository;
-    private final FormationRepository formationRepository;
+    private final EvaluationRepository evaluationRepository;
+    private final CompetenceRepository competenceRepository;
+
+    private final KeycloakAdminService keycloakAdminService;
     private final EmployeMapper mapper;
     private final PasswordEncoder passwordEncoder;
-    private final CompetenceRepository competenceRepository;
-    private final AuditService auditService;
-    private final KeycloakPasswordService keycloakPasswordService;
+    private final RoleProvisioningService roleProvisioningService;
 
-    // ===== MÉTHODES DE BASE =====
-
-    @Override
-    @Transactional(readOnly = true)
-    public List<EmployeDTO> findAll() {
-        return employeRepository.findAll()
-                .stream()
-                .map(mapper::toDto)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public Page<EmployeDTO> findAll(Pageable pageable) {
-        Page<Employe> page = employeRepository.findAll(pageable);
-
-        List<EmployeDTO> dtos = page.getContent()
-                .stream()
-                .map(mapper::toDto)
-                .collect(Collectors.toList());
-
-        return new PageImpl<>(dtos, pageable, page.getTotalElements());
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public long count() {
-        return employeRepository.count();
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public Optional<EmployeDTO> findById(Long id) {
-        return employeRepository.findById(id).map(mapper::toDto);
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public Optional<EmployeDTO> findByMatricule(String matricule) {
-        return employeRepository.findByMatricule(matricule).map(mapper::toDto);
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public List<EmployeDTO> findByDepartement(String departement) {
-        return employeRepository.findByDepartement(departement)
-                .stream()
-                .map(mapper::toDto)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public List<EmployeDTO> findByStatut(String statut) {
-        return employeRepository.findByStatut(statut)
-                .stream()
-                .map(mapper::toDto)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public List<EmployeDTO> findByManagerId(Long managerId) {
-        return employeRepository.findByManagerId(managerId)
-                .stream()
-                .map(mapper::toDto)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public List<EmployeDTO> findByServiceId(Long serviceId) {
-        return employeRepository.findByServiceId(serviceId)
-                .stream()
-                .map(mapper::toDto)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public List<EmployeDTO> findActifs() {
-        return employeRepository.findAllActifs()
-                .stream()
-                .map(mapper::toDto)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public List<EmployeDTO> findSoldeCongesFaible(Integer seuil) {
-        return employeRepository.findBySoldeCongesLessThan(seuil)
-                .stream()
-                .map(mapper::toDto)
-                .collect(Collectors.toList());
-    }
-
-    // ===== CRUD =====
+    // =========================
+    // CREATE
+    // =========================
 
     @Override
     public EmployeDTO create(EmployeDTO dto) {
-        log.debug("Création d'un employé: {}", dto.getMatricule());
+        String role = roleProvisioningService.normalizeRole(dto.getRole());
 
-        if (dto.getMatricule() == null || dto.getMatricule().trim().isEmpty()) {
-            throw new BusinessException("Le matricule est obligatoire");
+        Employe employe;
+
+        if ("MANAGER".equalsIgnoreCase(role)) {
+            employe = new Manager();
+        } else if ("ADMIN_RH".equalsIgnoreCase(role)) {
+            employe = new AdministrateurRH();
+        } else {
+            employe = new Employe();
         }
 
-        if (dto.getNom() == null || dto.getNom().trim().isEmpty()) {
-            throw new BusinessException("Le nom est obligatoire");
+        employe.setNom(dto.getNom());
+        employe.setPrenom(dto.getPrenom());
+
+        if (dto.getEmail() != null) {
+            employe.setEmail(dto.getEmail().trim().toLowerCase());
         }
 
-        if (dto.getPrenom() == null || dto.getPrenom().trim().isEmpty()) {
-            throw new BusinessException("Le prénom est obligatoire");
-        }
-
-        if (dto.getEmail() == null || dto.getEmail().trim().isEmpty()) {
-            throw new BusinessException("L'email est obligatoire");
-        }
-
-        if (dto.getDateEmbauche() == null) {
-            throw new BusinessException("La date d'embauche est obligatoire");
-        }
-
-        if (dto.getSalaire() == null) {
-            throw new BusinessException("Le salaire est obligatoire");
-        }
-
-        if (employeRepository.existsByMatricule(dto.getMatricule())) {
-            throw new BusinessException("Un employé avec ce matricule existe déjà");
-        }
-
-        if (employeRepository.findByEmail(dto.getEmail()).isPresent()) {
-            throw new BusinessException("Un employé avec cet email existe déjà");
-        }
-
-        Employe employe = mapper.toEntity(dto);
-
-        if (dto.getServiceId() != null) {
-            com.codeWithProject.ecom.entity.Service service = serviceRepository.findById(dto.getServiceId())
-                    .orElseThrow(() -> new ResourceNotFoundException("Service", dto.getServiceId()));
-            employe.setService(service);
-        }
-
-        if (dto.getManagerId() != null) {
-            Manager manager = managerRepository.findById(dto.getManagerId())
-                    .orElseThrow(() -> new ResourceNotFoundException("Manager", dto.getManagerId()));
-            employe.setManager(manager);
-        } else if (dto.getManagerEmail() != null && !dto.getManagerEmail().isBlank()) {
-            Manager manager = managerRepository.findByEmail(dto.getManagerEmail())
-                    .orElseThrow(() -> new ResourceNotFoundException("Manager avec email " + dto.getManagerEmail()));
-            employe.setManager(manager);
-        }
-
-        String rawPassword = dto.getPassword() != null ? dto.getPassword() : "default123";
-        employe.setPassword(passwordEncoder.encode(rawPassword));
-
-        String role = dto.getRole() != null ? dto.getRole() : "user";
+        employe.setTelephone(dto.getTelephone());
+        employe.setPoste(dto.getPoste());
+        employe.setDepartement(dto.getDepartement());
+        employe.setAdresse(dto.getAdresse());
+        employe.setMatricule(dto.getMatricule());
+        employe.setSalaire(dto.getSalaire());
+        employe.setDateEmbauche(dto.getDateEmbauche());
+        employe.setSoldeConges(dto.getSoldeConges());
+        employe.setPhotoUrl(dto.getPhotoUrl());
         employe.setRole(role);
-        employe.setTypeEmploye(determineTypeFromRole(role));
+
+        String password = dto.getPassword() != null && !dto.getPassword().isBlank()
+                ? dto.getPassword()
+                : "default123";
+
+        employe.setPassword(passwordEncoder.encode(password));
 
         if (employe.getActif() == null) {
             employe.setActif(true);
-        }
-
-        if (employe.getCompteVerrouille() == null) {
-            employe.setCompteVerrouille(false);
-        }
-
-        if (employe.getNombreConnexions() == null) {
-            employe.setNombreConnexions(0);
-        }
-
-        if (employe.getTentativesEchec() == null) {
-            employe.setTentativesEchec(0);
-        }
-
-        if (employe.getSoldeConges() == null) {
-            employe.setSoldeConges(25);
         }
 
         if (employe.getStatut() == null) {
             employe.setStatut("ACTIF");
         }
 
-        Employe saved = employeRepository.save(employe);
+        applyManagerRules(employe, dto.getManagerId());
 
-        log.info("Employé créé avec succès - ID: {}, rôle: {}", saved.getId(), role);
+        Employe saved = employeRepository.saveAndFlush(employe);
+        Long savedId = saved.getId();
 
-        return mapper.toDto(saved);
+        roleProvisioningService.provisionRole(saved);
+
+        Employe refreshed = employeRepository.findById(savedId)
+                .orElseThrow(() -> new ResourceNotFoundException("Employé", savedId));
+
+        return mapper.toDto(refreshed);
     }
 
-    private String determineTypeFromRole(String role) {
-        if ("admin_rh".equalsIgnoreCase(role) || "ADMIN_RH".equalsIgnoreCase(role)) {
-            return Employe.TYPE_ADMIN_RH;
-        } else if ("manager".equalsIgnoreCase(role) || "MANAGER".equalsIgnoreCase(role)) {
-            return Employe.TYPE_MANAGER;
-        } else {
-            return Employe.TYPE_EMPLOYE;
-        }
-    }
+    // =========================
+    // UPDATE
+    // =========================
 
     @Override
     public EmployeDTO update(Long id, EmployeDTO dto) {
-        Employe actor = getCurrentAuthenticatedEmploye();
-
         Employe employe = employeRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Employé", id));
 
-        String before = buildEmployeSnapshot(employe);
+        String oldRole = employe.getRole();
 
         if (dto.getNom() != null) {
             employe.setNom(dto.getNom());
@@ -280,12 +126,8 @@ public class EmployeServiceImpl implements EmployeService {
             employe.setPrenom(dto.getPrenom());
         }
 
-        if (dto.getEmail() != null) {
-            employe.setEmail(dto.getEmail());
-        }
-
-        if (dto.getTelephone() != null) {
-            employe.setTelephone(dto.getTelephone());
+        if (dto.getEmail() != null && !dto.getEmail().isBlank()) {
+            employe.setEmail(dto.getEmail().trim().toLowerCase());
         }
 
         if (dto.getPoste() != null) {
@@ -296,410 +138,199 @@ public class EmployeServiceImpl implements EmployeService {
             employe.setDepartement(dto.getDepartement());
         }
 
-        if (dto.getRole() != null) {
-            employe.setRole(dto.getRole());
-            employe.setTypeEmploye(determineTypeFromRole(dto.getRole()));
+        if (dto.getTelephone() != null) {
+            employe.setTelephone(dto.getTelephone());
         }
 
         if (dto.getStatut() != null) {
             employe.setStatut(dto.getStatut());
-
-            if ("ACTIF".equalsIgnoreCase(dto.getStatut())) {
-                employe.setActif(true);
-            } else if ("INACTIF".equalsIgnoreCase(dto.getStatut())) {
-                employe.setActif(false);
-            }
         }
 
-        if (dto.getActif() != null) {
-            employe.setActif(dto.getActif());
+        if (dto.getPhotoUrl() != null && !dto.getPhotoUrl().isBlank()) {
+            employe.setPhotoUrl(dto.getPhotoUrl());
         }
 
-        Employe saved = employeRepository.save(employe);
+        if (dto.getMatricule() != null && !dto.getMatricule().isBlank()) {
+            employe.setMatricule(dto.getMatricule());
+        }
 
-        String after = buildEmployeSnapshot(saved);
+        if (dto.getDateEmbauche() != null) {
+            employe.setDateEmbauche(dto.getDateEmbauche());
+        }
 
-        auditService.logAction(
-                "MODIFICATION",
-                actor.getId(),
-                actor.getEmail(),
-                "EMPLOYE",
-                saved.getId(),
-                saved.getEmail(),
-                "Avant: " + before + " | Après: " + after
-        );
+        if (dto.getSalaire() != null) {
+            employe.setSalaire(dto.getSalaire());
+        }
+
+        if (dto.getSoldeConges() != null) {
+            employe.setSoldeConges(dto.getSoldeConges());
+        }
+
+        boolean roleChanged = false;
+
+        if (dto.getRole() != null && !dto.getRole().isBlank()) {
+            String newRole = roleProvisioningService.normalizeRole(dto.getRole());
+            employe.setRole(newRole);
+            roleChanged = oldRole == null || !oldRole.equalsIgnoreCase(newRole);
+        }
+
+        applyManagerRules(employe, dto.getManagerId());
+
+        Employe saved = employeRepository.saveAndFlush(employe);
+        Long savedId = saved.getId();
+
+        if (roleChanged) {
+            roleProvisioningService.provisionRole(saved);
+
+            Employe refreshed = employeRepository.findById(savedId)
+                    .orElseThrow(() -> new ResourceNotFoundException("Employé", savedId));
+
+            return mapper.toDto(refreshed);
+        }
 
         return mapper.toDto(saved);
     }
 
-    @Override
-    public EmployeDTO mettreAJourProfil(Long id, String poste, Double salaire, String departement) {
-        Employe employe = employeRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Employé", id));
-
-        if (poste != null) {
-            employe.setPoste(poste);
-        }
-
-        if (salaire != null) {
-            employe.setSalaire(salaire);
-        }
-
-        if (departement != null) {
-            employe.setDepartement(departement);
-        }
-
-        return mapper.toDto(employeRepository.save(employe));
-    }
+    // =========================
+    // PHOTO PROFIL
+    // =========================
 
     @Override
-    public EmployeDTO changerStatut(Long id, String nouveauStatut) {
-        Employe actor = getCurrentAuthenticatedEmploye();
-
-        Employe employe = employeRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Employé", id));
-
-        if (actor.getId().equals(employe.getId())) {
-            throw new BusinessException("Vous ne pouvez pas changer votre propre statut.");
+    public String uploadPhotoProfilByEmail(String email, MultipartFile file) throws IOException {
+        if (email == null || email.isBlank()) {
+            throw new ResourceNotFoundException("Email vide");
         }
 
-        if ("ADMIN_RH".equalsIgnoreCase(employe.getRole()) || "admin_rh".equalsIgnoreCase(employe.getRole())) {
-            throw new BusinessException("Vous ne pouvez pas désactiver un administrateur RH.");
+        Employe employe = employeRepository.findByEmailIgnoreCase(email.trim())
+                .orElseThrow(() -> new ResourceNotFoundException("Employé non trouvé : " + email));
+
+        if (file == null || file.isEmpty()) {
+            throw new IllegalArgumentException("Fichier vide");
         }
 
-        String ancienStatut = employe.getStatut();
+        String contentType = file.getContentType();
 
-        employe.setStatut(nouveauStatut);
-
-        if ("ACTIF".equalsIgnoreCase(nouveauStatut)) {
-            employe.setActif(true);
-        } else if ("INACTIF".equalsIgnoreCase(nouveauStatut)) {
-            employe.setActif(false);
+        if (contentType == null || !contentType.startsWith("image/")) {
+            throw new IllegalArgumentException("Le fichier doit être une image");
         }
 
-        Employe saved = employeRepository.save(employe);
+        String uploadDir = "uploads/profile-photos";
+        Files.createDirectories(Paths.get(uploadDir));
 
-        auditService.logAction(
-                "CHANGEMENT_STATUT",
-                actor.getId(),
-                actor.getEmail(),
-                "EMPLOYE",
-                saved.getId(),
-                saved.getEmail(),
-                "Ancien statut: " + ancienStatut + " | Nouveau statut: " + nouveauStatut
+        String originalFilename = file.getOriginalFilename();
+        String extension = "";
+
+        if (originalFilename != null && originalFilename.contains(".")) {
+            extension = originalFilename.substring(originalFilename.lastIndexOf("."));
+        }
+
+        String filename = "employe-" + employe.getId() + "-" + UUID.randomUUID() + extension;
+        Path filePath = Paths.get(uploadDir, filename);
+
+        Files.write(filePath, file.getBytes());
+
+        String photoUrl = "/api/uploads/profile-photos/" + filename;
+
+        employe.setPhotoUrl(photoUrl);
+        employeRepository.saveAndFlush(employe);
+
+        log.info(
+                "PHOTO PROFIL SAUVÉE => employeId={}, email={}, photoUrl={}",
+                employe.getId(),
+                employe.getEmail(),
+                photoUrl
         );
 
-        return mapper.toDto(saved);
+        return photoUrl;
     }
 
     @Override
-    public void delete(Long id) {
-        Employe actor = getCurrentAuthenticatedEmploye();
-
-        Employe employe = employeRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Employé", id));
-
-        if (actor.getId().equals(employe.getId())) {
-            throw new BusinessException("Vous ne pouvez pas vous désactiver vous-même.");
+    public void deletePhotoProfilByEmail(String email) {
+        if (email == null || email.isBlank()) {
+            throw new ResourceNotFoundException("Email vide");
         }
 
-        if ("ADMIN_RH".equalsIgnoreCase(employe.getRole()) || "admin_rh".equalsIgnoreCase(employe.getRole())) {
-            throw new BusinessException("Vous ne pouvez pas désactiver un administrateur RH.");
-        }
+        Employe employe = employeRepository.findByEmailIgnoreCase(email.trim())
+                .orElseThrow(() -> new ResourceNotFoundException("Employé non trouvé : " + email));
 
-        String before = buildEmployeSnapshot(employe);
+        employe.setPhotoUrl(null);
+        employeRepository.saveAndFlush(employe);
 
-        employe.setStatut("INACTIF");
-        employe.setActif(false);
-
-        Employe saved = employeRepository.save(employe);
-
-        String after = buildEmployeSnapshot(saved);
-
-        auditService.logAction(
-                "DESACTIVATION",
-                actor.getId(),
-                actor.getEmail(),
-                "EMPLOYE",
-                saved.getId(),
-                saved.getEmail(),
-                "Avant: " + before + " | Après: " + after
+        log.info(
+                "PHOTO PROFIL SUPPRIMÉE => employeId={}, email={}",
+                employe.getId(),
+                employe.getEmail()
         );
     }
 
-    // ===== STATISTIQUES =====
+    // =========================
+    // BASIC
+    // =========================
 
     @Override
-    @Transactional(readOnly = true)
-    public Map<String, Long> countByDepartement() {
-        return employeRepository.countByDepartement()
-                .stream()
-                .collect(Collectors.toMap(arr -> (String) arr[0], arr -> (Long) arr[1]));
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public Map<String, Long> countByStatut() {
-        return employeRepository.countByStatut()
-                .stream()
-                .collect(Collectors.toMap(arr -> (String) arr[0], arr -> (Long) arr[1]));
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public Double calculerMasseSalariale() {
-        Double result = employeRepository.sommeSalaires();
-        return result != null ? result : 0.0;
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public Double calculerSalaireMoyen() {
-        Double result = employeRepository.salaireMoyen();
-        return result != null ? result : 0.0;
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public List<EmployeDTO> findEmployesRecents(int limit) {
-        return employeRepository.findEmployesRecents()
-                .stream()
-                .limit(limit)
-                .map(mapper::toDto)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public List<EmployeDTO> search(String keyword) {
-        if (keyword == null || keyword.isBlank()) {
-            return findAll();
-        }
-
-        return employeRepository.searchEmployes(keyword.trim())
+    public List<EmployeDTO> findAll() {
+        return employeRepository.findAll()
                 .stream()
                 .map(mapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
-    @Transactional(readOnly = true)
-    public TableauBordEmployeDTO getStatsTableauBord() {
-        List<Map<String, Object>> stats = employeRepository.getStatsTableauBord();
-
-        if (stats == null || stats.isEmpty()) {
-            return TableauBordEmployeDTO.builder()
-                    .total(0L)
-                    .actifs(0L)
-                    .inactifs(0L)
-                    .enConge(0L)
-                    .salaireMoyen(0.0)
-                    .masseSalariale(0.0)
-                    .soldeCongesMoyen(0.0)
-                    .build();
-        }
-
-        Map<String, Object> stat = stats.get(0);
-
-        return TableauBordEmployeDTO.builder()
-                .total(toLong(stat.get("total")))
-                .actifs(toLong(stat.get("actifs")))
-                .inactifs(toLong(stat.get("inactifs")))
-                .enConge(toLong(stat.get("enConge")))
-                .salaireMoyen(toDouble(stat.get("salaireMoyen")))
-                .masseSalariale(toDouble(stat.get("masseSalariale")))
-                .soldeCongesMoyen(toDouble(stat.get("soldeCongesMoyen")))
-                .build();
+    public Page<EmployeDTO> findAll(Pageable pageable) {
+        return employeRepository.findAll(pageable)
+                .map(mapper::toDto);
     }
-
-    private Long toLong(Object value) {
-        if (value == null) {
-            return 0L;
-        }
-
-        if (value instanceof Number number) {
-            return number.longValue();
-        }
-
-        return Long.parseLong(value.toString());
-    }
-
-    private Double toDouble(Object value) {
-        if (value == null) {
-            return 0.0;
-        }
-
-        if (value instanceof Number number) {
-            return number.doubleValue();
-        }
-
-        return Double.parseDouble(value.toString());
-    }
-
-    // ===== MÉTHODES POUR L'UTILISATEUR AUTHENTIFIÉ =====
 
     @Override
-    @Transactional(readOnly = true)
+    public long count() {
+        return employeRepository.count();
+    }
+
+    @Override
+    public Optional<EmployeDTO> findById(Long id) {
+        return employeRepository.findById(id)
+                .map(mapper::toDto);
+    }
+
+    @Override
     public Optional<EmployeDTO> findByEmail(String email) {
-        return employeRepository.findByEmail(email).map(mapper::toDto);
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public SoldeCongesDTO getSoldeCongesByEmail(String email) {
-        Employe employe = employeRepository.findByEmail(email)
-                .orElseThrow(() -> new ResourceNotFoundException("Employé non trouvé"));
-
-        Integer total = employe.getSoldeConges() != null ? employe.getSoldeConges() : 25;
-        int annee = LocalDate.now().getYear();
-        long pris = demandeCongeRepository.countCongesPrisAnnee(employe.getId(), annee);
-        Integer restant = total - (int) pris;
-        long enAttente = demandeCongeRepository.countByEmployeIdAndStatut(employe.getId(), "EN_ATTENTE");
-
-        return SoldeCongesDTO.builder()
-                .total(total)
-                .pris((int) pris)
-                .restant(restant)
-                .enAttente((int) enAttente)
-                .build();
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public List<FormationEmployeDTO> getFormationsByEmail(String email) {
-        Employe employe = employeRepository.findByEmail(email)
-                .orElseThrow(() -> new ResourceNotFoundException("Employé non trouvé"));
-
-        return formationRepository.findFormationsByEmployeId(employe.getId())
-                .stream()
-                .map(formation -> FormationEmployeDTO.builder()
-                        .id(formation.getId())
-                        .titre(formation.getTitre())
-                        .domaine(formation.getDomaine())
-                        .statut("INSCRIT")
-                        .progression(0)
-                        .build())
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public List<HistoriqueCongeDTO> getHistoriqueCongesByEmail(String email) {
-        Employe employe = employeRepository.findByEmail(email)
-                .orElseThrow(() -> new ResourceNotFoundException("Employé non trouvé"));
-
-        return demandeCongeRepository.findByEmployeId(employe.getId())
-                .stream()
-                .map(demande -> HistoriqueCongeDTO.builder()
-                        .id(demande.getId())
-                        .dateDebut(demande.getDateDebut())
-                        .dateFin(demande.getDateFin())
-                        .type(demande.getType())
-                        .statut(demande.getStatut())
-                        .joursOuvres(demande.getJoursOuvres())
-                        .dateDemande(demande.getDateDemande())
-                        .dateDecision(demande.getDateDecision())
-                        .build())
-                .collect(Collectors.toList());
-    }
-
-   @Override
-public EmployeDTO updateProfilByEmail(String email, UpdateProfilRequest request) {
-    Employe employe = employeRepository.findByEmail(email)
-            .orElseThrow(() -> new ResourceNotFoundException("Employé non trouvé"));
-
-    if (request.getTelephone() != null) {
-        employe.setTelephone(request.getTelephone());
-    }
-
-    if (request.getAdresse() != null) {
-        employe.setAdresse(request.getAdresse());
-    }
-
-    if (request.getPoste() != null) {
-        employe.setPoste(request.getPoste());
-    }
-
-    if (request.getDepartement() != null) {
-        employe.setDepartement(request.getDepartement());
-    }
-
-    return mapper.toDto(employeRepository.save(employe));
-}
-@Override
-public void changePasswordByEmail(String email, ChangePasswordRequest request) {
-    employeRepository.findByEmail(email)
-            .orElseThrow(() -> new ResourceNotFoundException("Employé non trouvé"));
-
-    if (request.getOldPassword() == null || request.getOldPassword().isBlank()) {
-        throw new BusinessException("Ancien mot de passe obligatoire");
-    }
-
-    if (request.getNewPassword() == null || request.getNewPassword().isBlank()) {
-        throw new BusinessException("Nouveau mot de passe obligatoire");
-    }
-
-    if (request.getNewPassword().length() < 8) {
-        throw new BusinessException("Le nouveau mot de passe doit contenir au moins 8 caractères");
-    }
-
-    keycloakPasswordService.changePassword(
-            email,
-            request.getOldPassword(),
-            request.getNewPassword()
-    );
-}
-    @Override
-    public EmployeDTO changeEmailByEmail(String email, String newEmail) {
-        if (employeRepository.findByEmail(newEmail).isPresent()) {
-            throw new BusinessException("Cet email est déjà utilisé");
+        if (email == null || email.isBlank()) {
+            return Optional.empty();
         }
 
-        Employe employe = employeRepository.findByEmail(email)
-                .orElseThrow(() -> new ResourceNotFoundException("Employé non trouvé"));
-
-        employe.setEmail(newEmail);
-
-        return mapper.toDto(employeRepository.save(employe));
+        return employeRepository.findByEmailIgnoreCase(email.trim())
+                .map(mapper::toDto);
     }
 
-    // ===== MÉTHODES POUR MANAGER =====
+    @Override
+    public Optional<EmployeDTO> findByMatricule(String matricule) {
+        if (matricule == null || matricule.isBlank()) {
+            return Optional.empty();
+        }
+
+        return employeRepository.findByMatricule(matricule.trim())
+                .map(mapper::toDto);
+    }
+
+    // =========================
+    // MANAGERS
+    // =========================
 
     @Override
-    @Transactional(readOnly = true)
     public List<EmployeDTO> findAllManagers() {
-        return employeRepository.findByRole("MANAGER")
+        return employeRepository.findByRoleIgnoreCase("MANAGER")
                 .stream()
                 .map(mapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     @Transactional(readOnly = true)
-    public List<EmployeDTO> getEquipeByManagerEmail(String managerEmail) {
-        Employe manager = employeRepository.findByEmail(managerEmail)
-                .orElseThrow(() -> new ResourceNotFoundException("Manager non trouvé avec email: " + managerEmail));
-
-        return employeRepository.findByManagerId(manager.getId())
+    public List<EmployeDTO> getManagers() {
+        return employeRepository.findByRoleIgnoreCase("MANAGER")
                 .stream()
                 .map(mapper::toDto)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public EmployeDTO getEmployeForManager(Long employeId, String managerEmail) {
-        Employe manager = employeRepository.findByEmail(managerEmail)
-                .orElseThrow(() -> new ResourceNotFoundException("Manager non trouvé"));
-
-        Employe employe = employeRepository.findById(employeId)
-                .orElseThrow(() -> new ResourceNotFoundException("Employé non trouvé"));
-
-        if (employe.getManager() == null || !employe.getManager().getId().equals(manager.getId())) {
-            throw new BusinessException("Cet employé n'appartient pas à votre équipe");
-        }
-
-        return mapper.toDto(employe);
+                .toList();
     }
 
     @Override
@@ -707,185 +338,697 @@ public void changePasswordByEmail(String email, ChangePasswordRequest request) {
         Employe employe = employeRepository.findById(employeId)
                 .orElseThrow(() -> new ResourceNotFoundException("Employé", employeId));
 
-        if (managerId == null) {
-            employe.setManager(null);
-        } else {
-            Manager manager = managerRepository.findById(managerId)
-                    .orElseThrow(() -> new ResourceNotFoundException("Manager", managerId));
-            employe.setManager(manager);
+        applyManagerRules(employe, managerId);
+
+        return mapper.toDto(employeRepository.saveAndFlush(employe));
+    }
+
+    @Override
+    public List<EmployeDTO> getEquipeByManagerEmail(String email) {
+        if (email == null || email.isBlank()) {
+            return List.of();
+        }
+
+        Employe managerEmploye = employeRepository.findByEmailIgnoreCase(email.trim())
+                .orElseThrow(() -> new RuntimeException("Manager introuvable avec email: " + email));
+
+        if (!"MANAGER".equalsIgnoreCase(managerEmploye.getRole())) {
+            throw new RuntimeException("L'utilisateur connecté n'est pas un manager");
+        }
+
+        return employeRepository.findAll()
+                .stream()
+                .filter(e -> e.getManager() != null)
+                .filter(e -> Objects.equals(e.getManager().getId(), managerEmploye.getId()))
+                .map(mapper::toDto)
+                .toList();
+    }
+
+    @Override
+    public EmployeDTO getEmployeForManager(Long id, String email) {
+        if (email == null || email.isBlank()) {
+            throw new RuntimeException("Email manager obligatoire");
+        }
+
+        Employe managerEmploye = employeRepository.findByEmailIgnoreCase(email.trim())
+                .orElseThrow(() -> new RuntimeException("Manager introuvable avec email: " + email));
+
+        if (!"MANAGER".equalsIgnoreCase(managerEmploye.getRole())) {
+            throw new RuntimeException("L'utilisateur connecté n'est pas un manager");
+        }
+
+        Employe employe = employeRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Employé", id));
+
+        if (employe.getManager() == null ||
+                !Objects.equals(employe.getManager().getId(), managerEmploye.getId())) {
+            throw new RuntimeException("Cet employé n'appartient pas à l'équipe de ce manager");
+        }
+
+        return mapper.toDto(employe);
+    }
+
+    // =========================
+    // COMPETENCES
+    // =========================
+
+    @Override
+    public void addCompetence(Long userId, Long compId, int niveau) {
+        Employe employe = employeRepository.findById(userId)
+                .orElseThrow(() -> new RuntimeException("Employé introuvable avec id: " + userId));
+
+        Competence competence = competenceRepository.findById(compId)
+                .orElseThrow(() -> new RuntimeException("Compétence introuvable avec id: " + compId));
+
+        Optional<EmployeCompetence> existing =
+                employeCompetenceRepository.findByEmploye_IdAndCompetence_Id(userId, compId);
+
+        if (existing.isPresent()) {
+            EmployeCompetence ec = existing.get();
+            ec.setNiveau(convertToLevel(niveau));
+            employeCompetenceRepository.save(ec);
+
+            log.info(
+                    "Compétence mise à jour: employeId={}, competenceId={}, niveau={}",
+                    userId,
+                    compId,
+                    ec.getNiveau()
+            );
+
+            return;
+        }
+
+        EmployeCompetence ec = new EmployeCompetence();
+        ec.setEmploye(employe);
+        ec.setCompetence(competence);
+        ec.setNiveau(convertToLevel(niveau));
+
+        employeCompetenceRepository.save(ec);
+
+        log.info(
+                "Compétence ajoutée: employeId={}, competenceId={}, niveau={}",
+                userId,
+                compId,
+                ec.getNiveau()
+        );
+    }
+
+    @Override
+    public void updateCompetence(Long userId, Long compId, int niveau) {
+        EmployeCompetence ec = employeCompetenceRepository
+                .findByEmploye_IdAndCompetence_Id(userId, compId)
+                .orElseThrow(() -> new RuntimeException("Compétence employé introuvable"));
+
+        ec.setNiveau(convertToLevel(niveau));
+        employeCompetenceRepository.save(ec);
+    }
+
+    @Override
+    public List<EmployeCompetence> getCompetencesEntity(Long id) {
+        return employeCompetenceRepository.findByEmploye_Id(id);
+    }
+
+    @Override
+    public List<CompetenceEmployeDTO> getCompetencesByEmail(String email) {
+        Employe employe = employeRepository.findByEmailIgnoreCase(email.trim())
+                .orElseThrow(() -> new RuntimeException("Employé introuvable avec email: " + email));
+
+        return employeCompetenceRepository.findByEmploye_Id(employe.getId())
+                .stream()
+                .map(ec -> {
+                    Competence c = ec.getCompetence();
+
+                    return CompetenceEmployeDTO.builder()
+                            .id(ec.getId())
+                            .competenceId(c != null ? c.getId() : null)
+                            .nom(c != null ? c.getNom() : null)
+                            .categorie(c != null ? c.getCategorie() : null)
+                            .description(c != null ? c.getDescription() : null)
+                            .niveau(ec.getNiveau())
+                            .build();
+                })
+                .toList();
+    }
+
+    @Override
+    public void updateCompetences(Long id, List<CompetenceDTO> dtos) {
+        if (dtos == null) {
+            return;
+        }
+
+        for (CompetenceDTO dto : dtos) {
+            if (dto.getId() != null) {
+                addCompetence(id, dto.getId(), 1);
+            }
+        }
+    }
+
+    // =========================
+    // FORMATIONS / CONGES / EVALUATIONS
+    // =========================
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<FormationEmployeDTO> getFormationsByEmail(String email) {
+        if (email == null || email.isBlank()) {
+            return List.of();
+        }
+
+        Employe employe = employeRepository.findByEmailIgnoreCase(email.trim())
+                .orElseThrow(() -> new RuntimeException("Employé introuvable avec email: " + email));
+
+        return getFormationsByEmployeId(employe.getId());
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<FormationEmployeDTO> getFormationsByEmployeId(Long employeId) {
+        if (employeId == null) {
+            return List.of();
+        }
+
+        return employeFormationRepository.findByEmploye_Id(employeId)
+                .stream()
+                .filter(ef -> ef.getFormation() != null)
+                .map(ef -> {
+                    Formation formation = ef.getFormation();
+
+                    return FormationEmployeDTO.builder()
+                            .id(formation.getId())
+                            .titre(formation.getTitre())
+                            .domaine(formation.getDomaine())
+                            .statut(ef.getStatut())
+                            .progression(ef.getProgression() != null ? ef.getProgression() : 0)
+                            .dateDebut(
+                                    ef.getDateInscription() != null
+                                            ? ef.getDateInscription().toLocalDate()
+                                            : null
+                            )
+                            .dateFin(
+                                    ef.getDateCompletion() != null
+                                            ? ef.getDateCompletion().toLocalDate()
+                                            : null
+                            )
+                            .build();
+                })
+                .toList();
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<HistoriqueCongeDTO> getHistoriqueCongesByEmail(String email) {
+        if (email == null || email.isBlank()) {
+            return List.of();
+        }
+
+        Employe employe = employeRepository.findByEmailIgnoreCase(email.trim())
+                .orElseThrow(() -> new RuntimeException("Employé introuvable avec email: " + email));
+
+        return getCongesByEmployeId(employe.getId());
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<HistoriqueCongeDTO> getCongesByEmployeId(Long employeId) {
+        if (employeId == null) {
+            return List.of();
+        }
+
+        return demandeCongeRepository.findByEmploye_IdOrderByDateDemandeDesc(employeId)
+                .stream()
+                .map(c -> HistoriqueCongeDTO.builder()
+                        .id(c.getId())
+                        .dateDebut(c.getDateDebut())
+                        .dateFin(c.getDateFin())
+                        .type(c.getType())
+                        .statut(c.getStatut())
+                        .joursOuvres(c.getJoursOuvres())
+                        .dateDemande(c.getDateDemande())
+                        .dateDecision(c.getDateDecision())
+                        .build())
+                .toList();
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public List<EvaluationDTO> getEvaluationsByEmployeId(Long employeId) {
+        if (employeId == null) {
+            return List.of();
+        }
+
+        return evaluationRepository.findByEmploye_IdOrderByDateEvaluationDesc(employeId)
+                .stream()
+                .map(e -> EvaluationDTO.builder()
+                        .id(e.getId())
+                        .employeId(e.getEmploye() != null ? e.getEmploye().getId() : null)
+                        .employeNom(e.getEmploye() != null ? e.getEmploye().getNom() : null)
+                        .employePrenom(e.getEmploye() != null ? e.getEmploye().getPrenom() : null)
+                        .dateEvaluation(e.getDateEvaluation())
+                        .note(e.getNote())
+                        .objectifsAtteints(e.getObjectifsAtteints())
+                        .commentaire(e.getCommentaire())
+                        .evaluateurId(e.getEvaluateur() != null ? e.getEvaluateur().getId() : null)
+                        .evaluateurNom(buildFullName(e.getEvaluateur()))
+                        .build())
+                .toList();
+    }
+
+    // =========================
+    // PROFIL CONNECTE
+    // =========================
+
+    @Override
+    public EmployeDTO updateProfilByEmail(String email, UpdateProfilRequest request) {
+        Employe employe = employeRepository.findByEmailIgnoreCase(email.trim())
+                .orElseThrow(() -> new RuntimeException("Employé introuvable avec email: " + email));
+
+        if (request.getTelephone() != null) {
+            employe.setTelephone(request.getTelephone());
+        }
+
+        if (request.getAdresse() != null) {
+            employe.setAdresse(request.getAdresse());
         }
 
         return mapper.toDto(employeRepository.save(employe));
     }
 
-    // ===== COMPÉTENCES =====
+  @Override
+@Transactional
+public void changePassword(Jwt jwt, ChangePasswordRequest dto) {
+    if (jwt == null) {
+        throw new BusinessException("Utilisateur non authentifié");
+    }
+
+    if (dto == null) {
+        throw new BusinessException("Données de mot de passe invalides");
+    }
+
+    if (dto.getOldPassword() == null || dto.getOldPassword().isBlank()) {
+        throw new BusinessException("L'ancien mot de passe est obligatoire");
+    }
+
+    if (dto.getNewPassword() == null || dto.getNewPassword().isBlank()) {
+        throw new BusinessException("Le nouveau mot de passe est obligatoire");
+    }
+
+    if (dto.getNewPassword().length() < 6) {
+        throw new BusinessException("Le mot de passe doit contenir au moins 6 caractères");
+    }
+
+    if (dto.getOldPassword().equals(dto.getNewPassword())) {
+        throw new BusinessException("Le nouveau mot de passe doit être différent de l'ancien");
+    }
+
+    String usernameOrEmail = extractEmail(jwt);
+
+    if (usernameOrEmail == null || usernameOrEmail.isBlank()) {
+        throw new BusinessException("Email ou username Keycloak introuvable");
+    }
+
+    Employe employe = employeRepository.findByEmailIgnoreCase(usernameOrEmail.trim())
+            .orElseThrow(() -> new ResourceNotFoundException(
+                    "Employé introuvable : " + usernameOrEmail
+            ));
+
+    boolean oldPasswordOk = keycloakAdminService.verifyPassword(
+            usernameOrEmail,
+            dto.getOldPassword()
+    );
+
+    if (!oldPasswordOk) {
+        throw new BusinessException("Ancien mot de passe incorrect");
+    }
+
+    String keycloakUserId = jwt.getSubject();
+
+    if (keycloakUserId == null || keycloakUserId.isBlank()) {
+        throw new BusinessException("Identifiant Keycloak introuvable");
+    }
+
+    keycloakAdminService.resetPassword(
+            keycloakUserId,
+            dto.getNewPassword()
+    );
+
+    /*
+     * Important :
+     * Keycloak est la source du mot de passe.
+     * On évite de sauvegarder le nouveau mot de passe dans employes.password.
+     *
+     * Si ton ancien système utilise encore employes.password ailleurs,
+     * tu peux temporairement garder la synchronisation en décommentant ces lignes :
+     *
+     * employe.setPassword(passwordEncoder.encode(dto.getNewPassword()));
+     * employeRepository.saveAndFlush(employe);
+     */
+
+    log.info(
+            "Mot de passe changé avec succès dans Keycloak pour employeId={}, email={}",
+            employe.getId(),
+            employe.getEmail()
+    );
+}
+
+    @Override
+    public EmployeDTO changeEmailByEmail(String email, String newEmail) {
+        Employe employe = employeRepository.findByEmailIgnoreCase(email.trim())
+                .orElseThrow(() -> new RuntimeException("Employé introuvable avec email: " + email));
+
+        employe.setEmail(newEmail.trim().toLowerCase());
+
+        return mapper.toDto(employeRepository.save(employe));
+    }
+
+    @Override
+    public Long getEmployeIdByEmail(String email) {
+        return employeRepository.findByEmailIgnoreCase(email.trim())
+                .map(Employe::getId)
+                .orElseThrow(() -> new RuntimeException("Employé introuvable avec email: " + email));
+    }
+
+    // =========================
+    // STATUT / PROFIL
+    // =========================
+
+    @Override
+    public EmployeDTO changerStatut(Long id, String nouveauStatut) {
+        Employe emp = employeRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Employé", id));
+
+        emp.setStatut(nouveauStatut);
+
+        return mapper.toDto(employeRepository.save(emp));
+    }
+
+    @Override
+    public EmployeDTO mettreAJourProfil(Long id, String poste, Double salaire, String departement) {
+        Employe emp = employeRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Employé", id));
+
+        if (poste != null) {
+            emp.setPoste(poste);
+        }
+
+        if (salaire != null) {
+            emp.setSalaire(salaire);
+        }
+
+        if (departement != null) {
+            emp.setDepartement(departement);
+        }
+
+        return mapper.toDto(employeRepository.save(emp));
+    }
+
+    // =========================
+    // DELETE
+    // =========================
+
+ @Override
+@Transactional
+public void delete(Long id) {
+
+    Employe employe = employeRepository.findById(id)
+            .orElseThrow(() -> new ResourceNotFoundException("Employé", id));
+
+    log.info("Désactivation employé : id={}, email={}, role={}",
+            employe.getId(), employe.getEmail(), employe.getRole());
+
+    /*
+     * Soft delete :
+     * On ne supprime rien en base.
+     * On garde l'historique, les congés, formations, compétences, évaluations.
+     */
+    employe.setStatut("INACTIF");
+    employe.setActif(false);
+
+    /*
+     * Sécurité :
+     * Si l'employé désactivé est un manager,
+     * on retire ce manager des employés qu'il gérait.
+     * Mais on ne supprime aucun employé.
+     */
+    if ("MANAGER".equalsIgnoreCase(employe.getRole())) {
+        List<Employe> equipes = employeRepository.findAll()
+                .stream()
+                .filter(e -> e.getManager() != null)
+                .filter(e -> e.getManager().getId().equals(employe.getId()))
+                .toList();
+
+        for (Employe emp : equipes) {
+            emp.setManager(null);
+            employeRepository.save(emp);
+        }
+    }
+
+    employeRepository.saveAndFlush(employe);
+
+    log.info("Employé désactivé avec succès : id={}", id);
+}
+    // =========================
+    // RECHERCHES SIMPLES
+    // =========================
+
+    @Override
+    public List<EmployeDTO> findByDepartement(String departement) {
+        return employeRepository.findAll()
+                .stream()
+                .filter(e -> departement != null && departement.equalsIgnoreCase(e.getDepartement()))
+                .map(mapper::toDto)
+                .toList();
+    }
+
+    @Override
+    public List<EmployeDTO> findByStatut(String statut) {
+        return employeRepository.findAll()
+                .stream()
+                .filter(e -> statut != null && statut.equalsIgnoreCase(e.getStatut()))
+                .map(mapper::toDto)
+                .toList();
+    }
+
+    @Override
+    public List<EmployeDTO> findActifs() {
+        return employeRepository.findAll()
+                .stream()
+                .filter(e -> Boolean.TRUE.equals(e.getActif()))
+                .map(mapper::toDto)
+                .toList();
+    }
+
+    @Override
+    public List<EmployeDTO> findByManagerId(Long managerId) {
+        return employeRepository.findAll()
+                .stream()
+                .filter(e -> e.getManager() != null && Objects.equals(e.getManager().getId(), managerId))
+                .map(mapper::toDto)
+                .toList();
+    }
+
+    @Override
+    public List<EmployeDTO> findByServiceId(Long serviceId) {
+        return employeRepository.findAll()
+                .stream()
+                .filter(e -> e.getService() != null && Objects.equals(e.getService().getId(), serviceId))
+                .map(mapper::toDto)
+                .toList();
+    }
+
+    @Override
+    public List<EmployeDTO> findSoldeCongesFaible(Integer solde) {
+        return employeRepository.findAll()
+                .stream()
+                .filter(e -> e.getSoldeConges() != null && e.getSoldeConges() <= solde)
+                .map(mapper::toDto)
+                .toList();
+    }
+
+    @Override
+    public List<EmployeDTO> findEmployesRecents(int limit) {
+        return employeRepository.findAll()
+                .stream()
+                .sorted(Comparator.comparing(Employe::getId).reversed())
+                .limit(limit)
+                .map(mapper::toDto)
+                .toList();
+    }
+
+    @Override
+    public List<EmployeDTO> search(String keyword) {
+        if (keyword == null || keyword.isBlank()) {
+            return findAll();
+        }
+
+        String k = keyword.toLowerCase();
+
+        return employeRepository.findAll()
+                .stream()
+                .filter(e ->
+                        contains(e.getNom(), k)
+                                || contains(e.getPrenom(), k)
+                                || contains(e.getEmail(), k)
+                                || contains(e.getPoste(), k)
+                                || contains(e.getDepartement(), k)
+                )
+                .map(mapper::toDto)
+                .toList();
+    }
+
+    // =========================
+    // STATS
+    // =========================
+
+    @Override
+    public Map<String, Long> countByDepartement() {
+        Map<String, Long> result = new HashMap<>();
+
+        for (Employe e : employeRepository.findAll()) {
+            String dep = e.getDepartement() != null ? e.getDepartement() : "NON_DEFINI";
+            result.put(dep, result.getOrDefault(dep, 0L) + 1);
+        }
+
+        return result;
+    }
+
+    @Override
+    public Map<String, Long> countByStatut() {
+        Map<String, Long> result = new HashMap<>();
+
+        for (Employe e : employeRepository.findAll()) {
+            String statut = e.getStatut() != null ? e.getStatut() : "NON_DEFINI";
+            result.put(statut, result.getOrDefault(statut, 0L) + 1);
+        }
+
+        return result;
+    }
+
+    @Override
+    public Double calculerMasseSalariale() {
+        return employeRepository.findAll()
+                .stream()
+                .map(Employe::getSalaire)
+                .filter(Objects::nonNull)
+                .mapToDouble(Double::doubleValue)
+                .sum();
+    }
+
+    @Override
+    public Double calculerSalaireMoyen() {
+        List<Double> salaires = employeRepository.findAll()
+                .stream()
+                .map(Employe::getSalaire)
+                .filter(Objects::nonNull)
+                .toList();
+
+        if (salaires.isEmpty()) {
+            return 0.0;
+        }
+
+        return salaires.stream()
+                .mapToDouble(Double::doubleValue)
+                .average()
+                .orElse(0.0);
+    }
+
+    @Override
+    public TableauBordEmployeDTO getStatsTableauBord() {
+        return new TableauBordEmployeDTO();
+    }
+
+    @Override
+    public SoldeCongesDTO getSoldeCongesByEmail(String email) {
+        Employe employe = employeRepository.findByEmailIgnoreCase(email.trim())
+                .orElseThrow(() -> new RuntimeException("Employé introuvable avec email: " + email));
+
+        SoldeCongesDTO dto = new SoldeCongesDTO();
+
+        try {
+            dto.getClass().getMethod("setEmployeId", Long.class).invoke(dto, employe.getId());
+        } catch (Exception ignored) {}
+
+        try {
+            dto.getClass().getMethod("setSoldeConges", Integer.class).invoke(dto, employe.getSoldeConges());
+        } catch (Exception ignored) {}
+
+        return dto;
+    }
+
+    // =========================
+    // HELPERS
+    // =========================
+
+    private String extractEmail(Jwt jwt) {
+        if (jwt == null) {
+            return null;
+        }
+
+        String email = jwt.getClaimAsString("email");
+
+        if (email == null || email.isBlank()) {
+            email = jwt.getClaimAsString("preferred_username");
+        }
+
+        if (email == null || email.isBlank()) {
+            email = jwt.getSubject();
+        }
+
+        return email != null ? email.trim().toLowerCase() : null;
+    }
+
+    private String buildFullName(Employe employe) {
+        if (employe == null) {
+            return null;
+        }
+
+        String prenom = employe.getPrenom() != null ? employe.getPrenom() : "";
+        String nom = employe.getNom() != null ? employe.getNom() : "";
+
+        String fullName = (prenom + " " + nom).trim();
+
+        return fullName.isBlank() ? null : fullName;
+    }
 
     private String convertToLevel(int niveau) {
         return switch (niveau) {
             case 1 -> "DEBUTANT";
             case 2 -> "INTERMEDIAIRE";
             case 3 -> "AVANCE";
-            case 4, 5 -> "EXPERT";
+            case 4 -> "EXPERT";
             default -> "DEBUTANT";
         };
     }
 
-    @Override
-    public void addCompetence(Long userId, Long compId, int niveau) {
-        boolean exists = employeCompetenceRepository.existsByEmployeIdAndCompetenceId(userId, compId);
+    private boolean contains(String value, String keyword) {
+        return value != null && value.toLowerCase().contains(keyword);
+    }
 
-        if (exists) {
-            throw new BusinessException("Compétence déjà ajoutée");
+    private void applyManagerRules(Employe employe, Long managerId) {
+        if (employe == null) {
+            throw new BusinessException("Employé invalide");
         }
 
-        Employe emp = employeRepository.findById(userId)
-                .orElseThrow(() -> new ResourceNotFoundException("Employé", userId));
-
-        Competence comp = competenceRepository.findById(compId)
-                .orElseThrow(() -> new ResourceNotFoundException("Compétence", compId));
-
-        EmployeCompetence ec = new EmployeCompetence();
-        ec.setEmploye(emp);
-        ec.setCompetence(comp);
-        ec.setNiveau(convertToLevel(niveau));
-
-        employeCompetenceRepository.save(ec);
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public List<CompetenceEmployeDTO> getCompetencesByEmail(String email) {
-        Optional<Employe> emp = employeRepository.findByEmail(email);
-
-        if (emp.isEmpty()) {
-            return new ArrayList<>();
+        if ("MANAGER".equalsIgnoreCase(employe.getRole())) {
+            employe.setManager(null);
+            return;
         }
 
-        List<EmployeCompetence> list = employeCompetenceRepository.findByEmployeId(emp.get().getId());
-
-        if (list == null) {
-            return new ArrayList<>();
+        if (managerId == null) {
+            employe.setManager(null);
+            return;
         }
 
-        return list.stream()
-                .map(c -> {
-                    CompetenceEmployeDTO dto = new CompetenceEmployeDTO();
-                    dto.setNom(c.getCompetence().getNom());
-                    dto.setNiveau(c.getNiveau());
-                    return dto;
-                })
-                .toList();
-    }
-
-    @Override
-    public void updateCompetences(Long employeId, List<CompetenceDTO> dtos) {
-        for (CompetenceDTO dto : dtos) {
-            EmployeCompetence ec = employeCompetenceRepository.findByEmployeAndCompetence(
-                    employeId,
-                    dto.getCompetenceId()
-            );
-
-            if (ec != null) {
-                ec.setNiveau(convertToLevel(dto.getNiveau()));
-                employeCompetenceRepository.save(ec);
-            }
-        }
-    }
-
-    @Override
-    public Long getEmployeIdByEmail(String email) {
-        if (email == null) {
-            return null;
+        if (employe.getId() != null && managerId.equals(employe.getId())) {
+            throw new BusinessException("Un employé ne peut pas être son propre manager");
         }
 
-        String normalizedEmail = email.trim().toLowerCase();
+        Manager manager = managerRepository.findById(managerId)
+                .orElseThrow(() -> new ResourceNotFoundException("Manager", managerId));
 
-        return employeRepository.findByEmail(normalizedEmail)
-                .map(Employe::getId)
-                .orElse(null);
-    }
-
-    @Override
-    public void updateCompetence(Long userId, Long compId, int niveau) {
-        EmployeCompetence ec = employeCompetenceRepository.findByEmployeAndCompetence(userId, compId);
-
-        if (ec != null) {
-            ec.setNiveau(convertToLevel(niveau));
-            employeCompetenceRepository.save(ec);
-        }
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public List<EmployeCompetence> getCompetencesEntity(Long id) {
-        return employeCompetenceRepository.findByEmployeId(id);
-    }
-
-    // ===== FORMATIONS =====
-
-    @Override
-    @Transactional(readOnly = true)
-    public List<FormationEmployeDTO> getFormationsByEmployeId(Long employeId) {
-        Employe employe = employeRepository.findById(employeId)
-                .orElseThrow(() -> new ResourceNotFoundException("Employé", employeId));
-
-        if (employe.getEmployeFormations() == null) {
-            return List.of();
+        if (!"MANAGER".equalsIgnoreCase(manager.getRole())) {
+            throw new BusinessException("L'utilisateur sélectionné n'a pas le rôle MANAGER");
         }
 
-        return employe.getEmployeFormations()
-                .stream()
-                .filter(ef -> ef.getFormation() != null)
-                .map(ef -> FormationEmployeDTO.builder()
-                        .id(ef.getFormation().getId())
-                        .titre(ef.getFormation().getTitre())
-                        .progression(ef.getProgression() != null ? ef.getProgression() : 0)
-                        .statut(ef.getStatut())
-                        .build())
-                .toList();
-    }
-
-    // ===== HELPERS AUDIT =====
-
-  private Employe getCurrentAuthenticatedEmploye() {
-    Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-
-    if (authentication == null) {
-        throw new BusinessException("Utilisateur non authentifié");
-    }
-
-    String email = null;
-
-    Object principal = authentication.getPrincipal();
-
-    if (principal instanceof Jwt jwt) {
-        email = jwt.getClaimAsString("email");
-
-        if (email == null || email.isBlank()) {
-            email = jwt.getClaimAsString("preferred_username");
-        }
-    }
-
-    if (email == null || email.isBlank()) {
-        email = authentication.getName();
-    }
-
-    final String finalEmail = email;
-
-    return employeRepository.findByEmail(finalEmail)
-            .orElseThrow(() -> new ResourceNotFoundException("Utilisateur connecté introuvable: " + finalEmail));
-}
-    private String buildEmployeSnapshot(Employe employe) {
-        return "{"
-                + "nom='" + employe.getNom() + '\''
-                + ", prenom='" + employe.getPrenom() + '\''
-                + ", email='" + employe.getEmail() + '\''
-                + ", telephone='" + employe.getTelephone() + '\''
-                + ", poste='" + employe.getPoste() + '\''
-                + ", departement='" + employe.getDepartement() + '\''
-                + ", role='" + employe.getRole() + '\''
-                + ", statut='" + employe.getStatut() + '\''
-                + ", actif=" + employe.getActif()
-                + '}';
+        employe.setManager(manager);
     }
 }
